_defaults.scss: fix: flickering between pages

--- a/www/css/base/_defaults.scss
+++ b/www/css/base/_defaults.scss
@@ -36,6 +36,10 @@ body {
 
   &.background-transition {
     transition: background-color 0.5s ease;
+    &:before,
+    &:after {
+      transition: background-color 0.5s ease;
+    }
   }
 
   &:before {
@@ -53,7 +57,6 @@ body {
     );
     mix-blend-mode: normal;
     filter: blur(100px);
-    transition: background-color 0.5s ease;
   }
 
   &:after {
@@ -65,7 +68,6 @@ body {
     z-index: -2;
     top: 0;
     left: -2.5%;
-    transition: background-color 0.5s ease;
   }
 
   @media only screen and (min-width: 864px) {
